# EDUSYNC

./: CMakeLists.txt  Event.cpp  Event.h  FEATURES.md  LICENSE  ModernCalendarWidget.cpp  ModernCalendarWidget.h  README.md  SuperAI.cpp  SuperAI.h  UltraDashboardRender.cpp  UltraDashboardRender.h  UltraMainWindow.cpp  UltraMainWindow.h  WeekHeaderView.cpp  WeekHeaderView.h  build.sh  demo.md  main.cpp
.github/workflows/: build.yml
